--- a/src/Fabulous.WPF/Fabulous.WPF.fsproj
+++ b/src/Fabulous.WPF/Fabulous.WPF.fsproj
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Fabulous" Version="2.0.7" />
+    <ProjectReference Include="..\Fabulous\Fabulous.fsproj" />
   </ItemGroup>
 
 </Project>
