--- a/samples/Sudoku.FS/Sudoku.FS.fsproj
+++ b/samples/Sudoku.FS/Sudoku.FS.fsproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Tile.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
