Getting the Sudoku app running. Still in early stages and not functional.

--- a/samples/Sudoku.FS/Sudoku.FS.fsproj
+++ b/samples/Sudoku.FS/Sudoku.FS.fsproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <Compile Include="Tile.fs" />
+    <Compile Include="Region.fs" />
+    <Compile Include="Board.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
